# fourierpy

./: README.md  mkdocs.yml  pyproject.toml
docs/examples/1-FourierSeries/: 1a_FourierSeries.ipynb  1b_FourierDraws.ipynb  points.csv
examples/1-FourierSeries/: 1a_FourierSeries.ipynb
fourierpy/: __init__.py  fourier_series.py
