[tool.poetry]
name = "fourierpy"
version = "0.1.0"
description = "descriptions"
authors = ["Santiago Cuervo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.20.1"
pandas = "^1.2.3"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
scipy = "^1.6.1"
pydantic = "^1.8.1"
PyYAML = "^5.4.1"
statsmodels = "^0.12.2"


[tool.poetry.dev-dependencies]
notebook = "^6.2.0"
ipykernel = "^5.5.0"
mkdocs-material = "^7.0.6"
mkdocstrings = "^0.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
